--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-    <string name="app_name">News</string>
-    <string name="title_textview">titleTextView</string>
-    <string name="description_textview">descriptionTextView</string>
-    <string name="enter_search_query">Entersearchquery</string>
-    <string name="search">Search</string>
+    <string name="app_name">news</string>
+    <string name="enter_search_query">Enter query</string>
+    <string name="search">search</string>
 </resources>
